# xerox-scripts

./: README.md  pyproject.toml
conf/: README.md
src/cards/: xerox2_cards.py
src/scripts/: xerox2_deck_analysis.py  xerox2_n0_generation.py  xerox2_n0_shuffle.py  xerox2_night_results.py
src/utils/: sheet.py
