[tool.poetry]
name = "Turbo Xerox EiMM Scripts"
version = "0.1.0"
description = "Scripts to facilitate setup and running of Turbo Xerox games"
authors = ["euklyd <euklyd@imnotgivingyoumyemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"
numpy = "1.18"
black = "^21.12b0"
gspread = "^5.1.1"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

